--- a/.ebextensions/django.config
+++ b/.ebextensions/django.config
@@ -2,19 +2,18 @@ option_settings:
   aws:elasticbeanstalk:container:python:
     WSGIPath: expense.wsgi:application
 
-  # Environment variables for Django settings
   aws:elasticbeanstalk:application:environment:
     DJANGO_SETTINGS_MODULE: expense.settings
     SECRET_KEY: Vj9Q0dh7TMLJKM1x1jetBHvIY04DdO__WkCCKSoaRchE2fF4niQ1ZNzj-qhV-r76VeA
-    DEBUG: "False"  # Set to False for production
+    DEBUG: "False"
+    AWS_STORAGE_BUCKET_NAME: django-static-files-expense
+    AWS_S3_REGION_NAME: us-east-1
     ALLOWED_HOSTS: expense-application-env.eba-7v85kh5i.us-east-1.elasticbeanstalk.com
 
-  # Static files configuration (if using S3 or local storage)
   aws:elasticbeanstalk:container:python:staticfiles:
     /static/: static/
 
 container_commands:
-  # Install additional OS-level dependencies if needed
   01_migrate:
     command: "python3 manage.py migrate"
     leader_only: true
@@ -29,9 +28,3 @@ files:
     group: root
     content: |
       client_max_body_size 10M;
-
-# Optional: Additional scripts to set up your environment
-commands:
-  enable_swap:
-    command: "fallocate -l 1G /swapfile && chmod 600 /swapfile && mkswap /swapfile && swapon /swapfile"
-    ignoreErrors: true
