--- a/.ebextensions/django.config
+++ b/.ebextensions/django.config
@@ -1,3 +1,3 @@
 option_settings:
-  aws:elasticbeanstalk:container:python:
-    WSGIPath: expense.wsgi:application
+  aws:elasticbeanstalk:application:environment:
+    ALLOWED_HOSTS: expense-application-env.eba-7v85kh5i.us-east-1.elasticbeanstalk.com
