changed the allowed host and django config for prod

--- a/.ebextensions/django.config
+++ b/.ebextensions/django.config
@@ -1,3 +1,8 @@
 option_settings:
   aws:elasticbeanstalk:container:python:
     WSGIPath: expense.wsgi:application
+  aws:elasticbeanstalk:application:environment:
+    DJANGO_SETTINGS_MODULE: expense.settings
+    ALLOWED_HOSTS: "expense-application-env.eba-7v85kh5i.us-east-1.elasticbeanstalk.com"
+    SECRET_KEY: 'u9m$p0h+6o)sz=lz8(c_2!js_d7&8s7v5$w&+42)v+-z18ufga'
+    DEBUG: "False"  # Set debug to False for production
