--- a/.ebextensions/django.config
+++ b/.ebextensions/django.config
@@ -1,3 +1,15 @@
+files:
+  "/etc/httpd/conf.d/static-files.conf":
+    mode: "000644"
+    owner: root
+    group: root
+    content: |
+      Alias /static/ /var/app/current/staticfiles/
+      <Directory /var/app/current/staticfiles/>
+          Require all granted
+      </Directory>
+
+
 option_settings:
   aws:elasticbeanstalk:container:python:
     WSGIPath: expense.wsgi:application
