changes for staticfiles in django.config with nginx and automatis restart command

--- a/.ebextensions/django.config
+++ b/.ebextensions/django.config
@@ -1,14 +1,20 @@
 files:
-  "/etc/httpd/conf.d/static-files.conf":
+  "/etc/nginx/conf.d/static-files.conf":
     mode: "000644"
     owner: root
     group: root
     content: |
-      Alias /static/ /var/app/current/staticfiles/
-      <Directory /var/app/current/staticfiles/>
-          Require all granted
-      </Directory>
+      location /static/ {
+          alias /var/app/current/staticfiles/;
+          autoindex on;
+          access_log off;
+      }
 
+container_commands:
+  01_collectstatic:
+    command: "source /var/app/venv/*/bin/activate && python manage.py collectstatic --noinput"
+  02_reload_nginx:
+    command: "sudo service nginx reload"
 
 option_settings:
   aws:elasticbeanstalk:container:python:
