--- a/.ebextensions/django.config
+++ b/.ebextensions/django.config
@@ -13,6 +13,8 @@ files:
 container_commands:
   01_collectstatic:
     command: "source /var/app/venv/*/bin/activate && python manage.py collectstatic --noinput"
+  02_enable_log_streaming:
+    command: "python scripts/enable_log_streaming.py"
 
 option_settings:
   aws:elasticbeanstalk:container:python:
