--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ crispy-bootstrap5==2024.10
 Django==4.2.16
 django-crispy-forms==2.3
 django-storages==1.14.4
+enable-log-streaming-MithunChandrasekar==0.0.1
 jmespath==1.0.1
 pillow==11.0.0
 python-dateutil==2.9.0.post0
