changes in django.config for collecr static

--- a/.ebextensions/django.config
+++ b/.ebextensions/django.config
@@ -12,7 +12,7 @@ files:
 
 container_commands:
   01_collectstatic:
-    command: "source /var/app/venv/*/bin/activate && python manage.py collectstatic --noinput"
+    command: "source /var/app/venv/*/bin/activate && python manage.py collectstatic"
   02_enable_log_streaming:
     command: "python scripts/enable_log_streaming_script.py"
 
