--- a/.ebextensions/django.config
+++ b/.ebextensions/django.config
@@ -19,6 +19,8 @@ container_commands:
 option_settings:
   aws:elasticbeanstalk:container:python:
     WSGIPath: expense.wsgi:application
+  aws:elasticbeanstalk:environment:proxy:staticfiles:
+    /static: staticfiles/
   aws:elasticbeanstalk:application:environment:
     DJANGO_SETTINGS_MODULE: expense.settings
     ALLOWED_HOSTS: "expense-application-env.eba-7v85kh5i.us-east-1.elasticbeanstalk.com"
